tests/parser/valid/11_function_calls.src
fn foo(int a, int b) {
}

fn test() {
    foo(1, 2);
    foo(1 + 2, 3);
}
