tests/parser/invalid/03_missing_call_paren.src
fn test() {
    foo(1;
}
